<resources>
    <string name="app_name">SmartSpace</string>
	<string name="welcome">Welcome to Smart Space trainings .apk</string>
	<string name="have_fun">Have fun!</string>
	<string name="options_howto">Hit your menu key for options!</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="prompt">prompt</string>
	<string name="no_location">location NA</string>
	<string name="start_recording">Recording started...</string>
	<string name="stop_recording">Recording stopped...</string>
	<string name="start_track">Tracking now...</string>
	<string name="stop_track">Tracking stopped...</string>
	<string name="new_location">We got a new position: </string>
	<string name="html_request_status_code">STATUS CODE</string>
	<string name="log_msg">log: </string>
	<string name="flush_db_success">Database flushed successfully</string>
	<string name="flush_db_fail">Error while flushing database</string>
	<string name="flush_db_warning">Warning!</string>
	<string name="flush_db_confirm">Do you really want to flush the whole database? All fingerprints will be lost!</string>
	<string name="flush_db_cancel">Canceled flushing database</string>
	<string name="flush_file_success">Files deleted successfully</string>
	<string name="flush_file_fail">Error while deleting files</string>
	<string name="flush_file_warning">Warning!</string>
	<string name="flush_file_confirm">Do you really want to delete all files? All raw data will be lost!</string>
	<string name="flush_file_cancel">Delete files canceled</string>
	<string name="input_method_dialog_title">Enter location</string>
	<string name="input_method_dialog_desc">You need to specify some coordinates and a symbolic location name!</string>
	<string name="input_method_dialog_name">Symbolic Location:</string>
	<string name="input_method_dialog_xCoord">X-Coord:</string>
	<string name="input_method_dialog_yCoord">Y-Coord:</string>
	<string name="input_method_dialog_zCoord">Floor:</string>
	<string name="input_method_dialog_success">Dialog Indoor Geo Point set to </string>
		<string name="zxing_fail">ZXing failed to scan QR Code...</string>
		<string name="zxing_success">Zxing Indoor Geo Point set to:</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_radio_graph">Radio Graph</string>
	<string name="menu_learn">Learn Some!</string>
	<string name="menu_stop_learn">Chill...</string>
	<string name="menu_track">Go Real-Time...</string>
	<string name="menu_stop_track">Back to static :-)</string>
	<string name="menu_flush">Flush Storage</string>
	<string name="menu_server_push">Push Location</string>
   	<string name="save">Save</string>
	<string name="restore_defaults">Restore Defaults</string>
	<string name="settings_saved">Settings saved</string>
	<string name="restored_default_settings">Restored default settings</string>
    <string name="input_method">Input Method</string>
	<string name="input_method_title">Choose input Method</string>
	<string name="input_method_summary">Input method used for entering a fixed position</string>
	<string name="input_method_default_value_QR">0x0000</string>
	<string name="input_method_default_value_dialog">0x0001</string>
    <string name="position_algorithms">Position Algorithms</string>
	<string name="position_algorithm_euklidean">Euklidean Distance</string>
	<string name="position_algorithm_euklidean_on">ED is ON</string>
	<string name="position_algorithm_euklidean_off">ED is OFF</string>
	<string name="persistance_config">Persistance Config</string>
	<string name="persistance_config_mode">Persistance Mode</string>
	<string name="persistance_config_mode_summary"></string>
	<string name="persistance_config_mode_title">Choose the persistance mode</string>
	<string name="persistance_config_refreshInterval">RM refresh interval</string>
	<string name="persistance_config_refreshInterval_title">Choose RM refresh interval</string>
	<string name="persistance_config_buffer_size">Buffer size</string>
	<string name="persistance_config_buffer_size_title">Choose adequate buffer size</string>
	<string name="fpt_collection">FPT Collection Config</string>
	<string name="fpt_collection_orientation_quant_count">Orientation Quantization Count</string>
	<string name="fpt_collection_orientation_quant_count_summary"></string>
	<string name="fpt_collection_orientation_quant_count_title">Specify how many orientations per FPT should be used</string>
	<string name="sensor_config_80211">Sensor Config 80211</string>
	<string name="sensor_config_80211_sensor_name">Sensor Name</string>
	<string name="sensor_config_80211_sensor_name_summary"></string>
	<string name="sensor_config_80211_sensor_name_title">Enter the sensor's name</string>
	<string name="sensor_config_80211_sensor_is_active">Is Active</string>
	<string name="sensor_config_80211_sensor_is_active_on">80211 Sensor is ON</string>
	<string name="sensor_config_80211_sensor_is_active_off">80211 Sensor is OFF</string>
	<string name="scanner_config_80211_passive">Scanner Config 80211 Passive</string>
	<string name="scanner_config_80211_passive_settings">80211 Passive Settings</string>
	<string name="scanner_config_80211_passive_scanner_name">Scanner Name</string>
	<string name="scanner_config_80211_passive_scanner_name_summary"></string>
	<string name="scanner_config_80211_passive_scanner_name_title">Enter the scanner's name</string>
	<string name="scanner_config_80211_passive_scanner_is_active">Is Active</string>
	<string name="scanner_config_80211_passive_scanner_is_active_on">80211 Passive Scanner is ON</string>
	<string name="scanner_config_80211_passive_scanner_is_active_off">80211 Passive Scanner is OFF</string>
	<string name="scanner_config_80211_passive_scanner_synchronize">Synchronize</string>
	<string name="scanner_config_80211_passive_scanner_synchronize_on">is ON</string>
	<string name="scanner_config_80211_passive_scanner_synchronize_off">is OFF</string>
	<string name="scanner_config_80211_passive_threshold">Threshold</string>
	<string name="scanner_config_80211_passive_threshold_summary"></string>
	<string name="scanner_config_80211_passive_threshold_title">Enter scanner's threshold</string>
	<string name="scanner_config_80211_passive_timeout">Timeout</string>
	<string name="scanner_config_80211_passive_timeout_summary"></string>
	<string name="scanner_config_80211_passive_timeout_title">Enter scanner's timeout</string>
	<string name="scanner_config_80211_passive_commands">Scanner commands</string>
	<string name="scanner_config_80211_passive_commands_mean_command">Mean Command</string>
	<string name="scanner_config_80211_passive_commands_mean_command_on">MC is ON</string>
	<string name="scanner_config_80211_passive_commands_mean_command_off">MC is OFF</string>
	<string name="sensor_config_gsm">Sensor Config GSM</string>
	<string name="sensor_config_gsm_sensor_name">Sensor Name</string>
	<string name="sensor_config_gsm_sensor_name_summary"></string>
	<string name="sensor_config_gsm_sensor_name_title">Enter the sensor's name</string>
	<string name="sensor_config_gsm_sensor_is_active">Is Active</string>
	<string name="sensor_config_gsm_sensor_is_active_on">GSM Sensor is ON</string>
	<string name="sensor_config_gsm_sensor_is_active_off">GSM Sensor is OFF</string>
	<string name="sensor_config_gsm_sensor_scan_selection">Scan Selection</string>
	<string name="sensor_config_gsm_sensor_scan_selection_title">Select Scan method</string>
	<string name="sensor_config_gsm_sensor_scan_selection_summary">Choose a GSM scan method</string>
	<string name="sensor_config_gsm_sensor_scan_selection_default_value">activeNeighborCell</string>
	<string name="scanner_config_gsm_cell">Scanner Config GSM Active Cell</string>
	<string name="scanner_config_gsm_cell_settings">Scanner Config GSM Settings</string>
	<string name="scanner_config_gsm_cell_scanner_name">Scanner Name</string>
	<string name="scanner_config_gsm_cell_scanner_name_summary"></string>
	<string name="scanner_config_gsm_cell_scanner_name_title">Enter the scanner's name</string>
	<string name="scanner_config_gsm_cell_scanner_is_active">Is Active</string>
	<string name="scanner_config_gsm_cell_scanner_is_active_on">Scanner is ON</string>
	<string name="scanner_config_gsm_cell_scanner_is_active_off">Scanner is OFF</string>
	<string name="scanner_config_gsm_cell_scanner_refresh_interval">Scan interval</string>
	<string name="scanner_config_gsm_cell_scanner_refresh_interval_summary">Set scan interval</string>
	<string name="scanner_config_gsm_cell_scanner_refresh_interval_title">Enter scan interval</string>
	<string name="scanner_config_gsm_cell_scanner_synchronize">Synchronize</string>
	<string name="scanner_config_gsm_cell_scanner_synchronize_on">is ON</string>
	<string name="scanner_config_gsm_cell_scanner_synchronize_off">is OFF</string>
	<string name="scanner_config_gsm_cell_threshold">Threshold</string>
	<string name="scanner_config_gsm_cell_threshold_summary"></string>
	<string name="scanner_config_gsm_cell_threshold_title">Enter scanner's threshold</string>
	<string name="scanner_config_gsm_cell_timeout">Timeout</string>
	<string name="scanner_config_gsm_cell_timeout_summary"></string>
	<string name="scanner_config_gsm_cell_timeout_title">Enter scanner's timeout</string>
	<string name="scanner_config_gsm_cell_commands">Scanner commands</string>
	<string name="scanner_config_gsm_cell_commands_mean_command">Mean Command</string>
	<string name="scanner_config_gsm_cell_commands_mean_command_on">MC is ON</string>
	<string name="scanner_config_gsm_cell_commands_mean_command_off">MC is OFF</string>
	<string name="sensor_config_imu">Sensor Config IMU</string>
	<string name="sensor_config_imu_sensor_name">Sensor Name</string>
	<string name="sensor_config_imu_sensor_name_title">Enter the sensor's name</string>
	<string name="sensor_config_imu_sensor_is_active">Is Active</string>
	<string name="sensor_config_imu_sensor_is_active_on">imu Sensor is ON</string>
	<string name="sensor_config_imu_sensor_is_active_off">imu Sensor is OFF</string>
	<string name="scanner_config_imu_motion">Scanner Config IMU Motion</string>
	<string name="scanner_config_imu_motion_settings">Scanner Config IMU Settings</string>
	<string name="scanner_config_imu_motion_name">SCN_IMU_Motion</string>
	<string name="scanner_config_imu_motion_name_summary"></string>
	<string name="scanner_config_imu_motion_name_title">Enter the scanner's name</string>
	<string name="scanner_config_imu_motion_is_active">Is Active</string>
	<string name="scanner_config_imu_motion_is_active_on">Scanner is ON</string>
	<string name="scanner_config_imu_motion_is_active_off">Scanner is OFF</string>
	<string name="scanner_config_imu_motion_sensitivity">Motion sensitivity</string>
	<string name="scanner_config_imu_motion_sensitivity_summary">Adjust sensitivity for motion detection</string>
	<string name="scanner_config_imu_motion_sensitivity_title">Set motion sensitivity</string>
	<string name="scanner_config_imu_motion_queue_capacity">Queue Capacity</string>
	<string name="scanner_config_imu_motion_queue_capacity_title">Set queue capacity</string>
    <string-array name="persistance_config_modes">
    	<item>Science mode</item>
    	<item>Proliferation mode</item>
    </string-array>
    <string-array name="persistance_config_mode_codes">
    	<item>0</item>
    	<item>1</item>
    </string-array>
    <string-array name="input_method_selection">
    	<item>QR-Codes</item>
    	<item>Dialog</item>
    </string-array>
    <string-array name="input_method_selection_codes">
    	<item>0x0000</item>
    	<item>0x0001</item>
    </string-array>
    <string-array name="gsm_scan_selection">
    	<item>Active Cell</item>
    	<item>Neighbor Cells</item>
    	<item>Active + Neighbor Cells</item>
    </string-array>
    <string-array name="gsm_scan_selection_codes">
    	<item>activeCell</item>
    	<item>neighborCell</item>
    	<item>activeNeighborCell</item>
    </string-array>
</resources>