<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
xmlns:android="http://schemas.android.com/apk/res/android"
android:title="Settings" 
>
	<ListPreference
		android:key="input_method"
	 	android:title="@string/input_method"
	 	android:summary="@string/input_method_summary"
		android:dialogTitle="@string/input_method_title"
		android:entries="@array/input_method_selection"
		android:entryValues="@array/input_method_selection_codes"
		android:defaultValue="@string/input_method_default_value_dialog"
	/>
	
	<PreferenceScreen
	android:title="@string/position_algorithms">
		<CheckBoxPreference
		android:key="position_algorithm_euklidean"
	 	android:title="@string/position_algorithm_euklidean"
	 	android:summaryOn="@string/position_algorithm_euklidean_on"
	 	android:summaryOff="@string/position_algorithm_euklidean_off"
		android:defaultValue="true"
		/>
	</PreferenceScreen>	
	
	<PreferenceScreen
	android:title="@string/persistance_config">
		<ListPreference
		android:key="persistance_config_mode"
	 	android:title="@string/persistance_config_mode"
	 	android:summary="@string/persistance_config_mode_summary"
		android:dialogTitle="@string/persistance_config_mode_title"
		android:entries="@array/persistance_config_modes"
		android:entryValues="@array/persistance_config_mode_codes"
		android:defaultValue="0"
		/>
		<EditTextPreference
		android:key="persistance_config_refreshInterval"
	 	android:title="@string/persistance_config_refreshInterval"
		android:dialogTitle="@string/persistance_config_refreshInterval_title"
		android:defaultValue="60000"
		android:numeric="integer"
		/>
		<EditTextPreference
		android:key="persistance_config_buffer_size"
	 	android:title="@string/persistance_config_buffer_size"
		android:dialogTitle="@string/persistance_config_buffer_size_title"
		android:defaultValue="5"
		android:numeric="integer"
		/>
	</PreferenceScreen>
	
	<PreferenceScreen
	android:title="@string/fpt_collection">
		<EditTextPreference
	 	android:key="fpt_collection_orientation_quant_count"
	 	android:title="@string/fpt_collection_orientation_quant_count"
	 	android:summary="@string/fpt_collection_orientation_quant_count_summary"
		android:dialogTitle="@string/fpt_collection_orientation_quant_count_title"
		android:defaultValue="4"
		android:numeric="integer"
    	android:maxLength="2" 
		/>
	</PreferenceScreen>
	
	<PreferenceScreen
	android:title="@string/sensor_config_80211">
		<EditTextPreference
	 	android:key="sensor_config_80211_sensor_name"
	 	android:title="@string/sensor_config_80211_sensor_name"
	 	android:summary="@string/sensor_config_80211_sensor_name_summary"
		android:dialogTitle="@string/sensor_config_80211_sensor_name_title"
		android:defaultValue="sensor80211"
		/>
		<CheckBoxPreference
		android:key="sensor_config_80211_sensor_is_active"
	 	android:title="@string/sensor_config_80211_sensor_is_active"
	 	android:summaryOn="@string/sensor_config_80211_sensor_is_active_on"
	 	android:summaryOff="@string/sensor_config_80211_sensor_is_active_off"
		android:defaultValue="true"
		/>	
		<PreferenceScreen
		android:title="@string/scanner_config_80211_passive">
			<PreferenceCategory
			android:title="@string/scanner_config_80211_passive_settings">
				<EditTextPreference
			 	android:key="scanner_config_80211_passive_scanner_name"
			 	android:title="@string/scanner_config_80211_passive_scanner_name"
			 	android:summary="@string/scanner_config_80211_passive_scanner_name_summary"
				android:dialogTitle="@string/scanner_config_80211_passive_scanner_name_title"
				android:defaultValue="scanner80211passive"
				/>
				<CheckBoxPreference
				android:key="scanner_config_80211_passive_scanner_is_active"
			 	android:title="@string/scanner_config_80211_passive_scanner_is_active"
			 	android:summaryOn="@string/scanner_config_80211_passive_scanner_is_active_on"
			 	android:summaryOff="@string/scanner_config_80211_passive_scanner_is_active_off"
				android:defaultValue="true"
				/>	
				<CheckBoxPreference
				android:key="scanner_config_80211_passive_scanner_synchronize"
			 	android:title="@string/scanner_config_80211_passive_scanner_synchronize"
			 	android:summaryOn="@string/scanner_config_80211_passive_scanner_synchronize_on"
			 	android:summaryOff="@string/scanner_config_80211_passive_scanner_synchronize_off"
				android:defaultValue="true"
				/>
				<EditTextPreference
			 	android:key="scanner_config_80211_passive_threshold"
			 	android:title="@string/scanner_config_80211_passive_threshold"
			 	android:summary="@string/scanner_config_80211_passive_threshold_summary"
				android:dialogTitle="@string/scanner_config_80211_passive_threshold_title"
				android:defaultValue="5"
				android:numeric="integer"
				/>
				<EditTextPreference
			 	android:key="scanner_config_80211_passive_timeout"
			 	android:title="@string/scanner_config_80211_passive_timeout"
			 	android:summary="@string/scanner_config_80211_passive_timeout_summary"
				android:dialogTitle="@string/scanner_config_80211_passive_timeout_title"
				android:defaultValue="1000"
				android:numeric="integer"
				/>
			</PreferenceCategory>			
			<PreferenceCategory
			android:title="@string/scanner_config_80211_passive_commands">
				<CheckBoxPreference
				android:key="scanner_config_80211_passive_commands_mean_command"
			 	android:title="@string/scanner_config_80211_passive_commands_mean_command"
			 	android:summaryOn="@string/scanner_config_80211_passive_commands_mean_command_on"
			 	android:summaryOff="@string/scanner_config_80211_passive_commands_mean_command_off"
				android:defaultValue="true"
				/>
			</PreferenceCategory>
		</PreferenceScreen>	
	</PreferenceScreen>
	 
	<PreferenceScreen
	android:title="@string/sensor_config_gsm">
		<EditTextPreference
	 	android:key="sensor_config_gsm_sensor_name"
	 	android:title="@string/sensor_config_gsm_sensor_name"
	 	android:summary="@string/sensor_config_gsm_sensor_name_summary"
		android:dialogTitle="@string/sensor_config_gsm_sensor_name_title"
		android:defaultValue="sensorGSM"
		/>
		<CheckBoxPreference
		android:key="sensor_config_gsm_sensor_is_active"
	 	android:title="@string/sensor_config_gsm_sensor_is_active"
	 	android:summaryOn="@string/sensor_config_gsm_sensor_is_active_on"
	 	android:summaryOff="@string/sensor_config_gsm_sensor_is_active_off"
		android:defaultValue="true"
		/>	
		<ListPreference
		android:key="gsm_scan_selection"
	 	android:title="@string/sensor_config_gsm_sensor_scan_selection_title"
	 	android:summary="@string/sensor_config_gsm_sensor_scan_selection_summary"
		android:dialogTitle="@string/sensor_config_gsm_sensor_scan_selection_title"
		android:entries="@array/gsm_scan_selection"
		android:entryValues="@array/gsm_scan_selection_codes"
		android:defaultValue="@string/sensor_config_gsm_sensor_scan_selection_default_value"
		/>
		<PreferenceScreen
		android:title="@string/scanner_config_gsm_cell">
			<PreferenceCategory
			android:title="@string/scanner_config_gsm_cell_settings">
				<EditTextPreference
			 	android:key="scanner_config_gsm_cell_scanner_name"
			 	android:title="@string/scanner_config_gsm_cell_scanner_name"
			 	android:summary="@string/scanner_config_gsm_cell_scanner_name_summary"
				android:dialogTitle="@string/scanner_config_gsm_cell_scanner_name_title"
				android:defaultValue="scannerGSMActiveCell"
				/>
				<CheckBoxPreference
				android:key="scanner_config_gsm_cell_scanner_is_active"
			 	android:title="@string/scanner_config_gsm_cell_scanner_is_active"
			 	android:summaryOn="@string/scanner_config_gsm_cell_scanner_is_active_on"
			 	android:summaryOff="@string/scanner_config_gsm_cell_scanner_is_active_off"
				android:defaultValue="true"
				/>
				<EditTextPreference
			 	android:key="scanner_config_gsm_cell_scanner_refresh_interval"
			 	android:title="@string/scanner_config_gsm_cell_scanner_refresh_interval"
			 	android:summary="@string/scanner_config_gsm_cell_scanner_refresh_interval_summary"
				android:dialogTitle="@string/scanner_config_gsm_cell_scanner_refresh_interval_title"
				android:defaultValue="5"
				android:numeric="integer"
				/>
				<CheckBoxPreference
				android:key="scanner_config_gsm_cell_scanner_synchronize"
			 	android:title="@string/scanner_config_gsm_cell_scanner_synchronize"
			 	android:summaryOn="@string/scanner_config_gsm_cell_scanner_synchronize_on"
			 	android:summaryOff="@string/scanner_config_gsm_cell_scanner_synchronize_off"
				android:defaultValue="true"
				/>
				<EditTextPreference
			 	android:key="scanner_config_gsm_cell_threshold"
			 	android:title="@string/scanner_config_gsm_cell_threshold"
			 	android:summary="@string/scanner_config_gsm_cell_threshold_summary"
				android:dialogTitle="@string/scanner_config_gsm_cell_threshold_title"
				android:defaultValue="10"
				android:numeric="integer"
				/>
				<EditTextPreference
			 	android:key="scanner_config_gsm_cell_timeout"
			 	android:title="@string/scanner_config_gsm_cell_timeout"
			 	android:summary="@string/scanner_config_gsm_cell_timeout_summary"
				android:dialogTitle="@string/scanner_config_gsm_cell_timeout_title"
				android:defaultValue="1000"
				android:numeric="integer"
				/>
			</PreferenceCategory>			
			<PreferenceCategory
			android:title="@string/scanner_config_gsm_cell_commands">
				<CheckBoxPreference
				android:key="scanner_config_gsm_cell__commands_mean_command"
			 	android:title="@string/scanner_config_gsm_cell_commands_mean_command"
			 	android:summaryOn="@string/scanner_config_gsm_cell_commands_mean_command_on"
			 	android:summaryOff="@string/scanner_config_gsm_cell_commands_mean_command_off"
				android:defaultValue="true"
				/>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceScreen>
	
	<PreferenceScreen
	android:title="@string/sensor_config_imu">
		<EditTextPreference
	 	android:key="sensor_config_imu_sensor_name"
	 	android:title="@string/sensor_config_imu_sensor_name"
		android:dialogTitle="@string/sensor_config_imu_sensor_name_title"
		android:defaultValue="sensorIMU"
		/>
		<CheckBoxPreference
		android:key="sensor_config_imu_sensor_is_active"
	 	android:title="@string/sensor_config_imu_sensor_is_active"
	 	android:summaryOn="@string/sensor_config_imu_sensor_is_active_on"
	 	android:summaryOff="@string/sensor_config_imu_sensor_is_active_off"
		android:defaultValue="true"
		/>	
		<PreferenceScreen
		android:title="@string/scanner_config_imu_motion">
			<PreferenceCategory
			android:title="@string/scanner_config_imu_motion_settings">
				<EditTextPreference
			 	android:key="scanner_config_imu_motion_name"
			 	android:title="@string/scanner_config_imu_motion_name"
			 	android:summary="@string/scanner_config_imu_motion_name_summary"
				android:dialogTitle="@string/scanner_config_imu_motion_name_title"
				android:defaultValue="SCN_IMU_Motion"
				/>
				<CheckBoxPreference
				android:key="scanner_config_imu_motion_is_active"
			 	android:title="@string/scanner_config_imu_motion_is_active"
			 	android:summaryOn="@string/scanner_config_imu_motion_is_active_on"
			 	android:summaryOff="@string/scanner_config_imu_motion_is_active_off"
				android:defaultValue="true"
				/>
				<EditTextPreference
			 	android:key="scanner_config_imu_motion_sensitivity"
			 	android:title="@string/scanner_config_imu_motion_sensitivity"
			 	android:summary="@string/scanner_config_imu_motion_sensitivity_summary"
				android:dialogTitle="@string/scanner_config_imu_motion_sensitivity_title"
				android:defaultValue="0.4"
				/>
				<EditTextPreference
			 	android:key="scanner_config_imu_motion_queue_capacity"
			 	android:title="@string/scanner_config_imu_motion_queue_capacity"
				android:dialogTitle="@string/scanner_config_imu_motion_queue_capacity_title"
				android:defaultValue="4"
				/>
			</PreferenceCategory>			
		</PreferenceScreen>
	</PreferenceScreen>
</PreferenceScreen>